--- a/front-end/src/app/forms/sched-h3/sched-h3.component.scss
+++ b/front-end/src/app/forms/sched-h3/sched-h3.component.scss
@@ -236,4 +236,18 @@
     margin-top: 1px  !important;
    // margin-bottom: 1px  !important;
   }
+
+  .ngx-pagination .current{
+    padding: 0.1875rem 0.625rem;
+    background: #9B9B9B !important;;
+    color: #fefefe;
+    cursor: default;
+  }
+
+  .ngx-pagination a, .ngx-pagination button {
+    color: #9B9B9B !important;;
+    display: block;
+    padding: 0.1875rem 0.625rem;
+    border-radius: 0;
+  }	
 }
