--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -119,10 +119,8 @@
         </app-sched-c>-->
         <app-sched-c1
           [hidden]="scheduleType !== 'sched_c1'"
-          [transactionTypeText]="transactionTypeTextSchedC"
-          [transactionType]="transactionTypeSchedC"
+          [forceChangeDetection]="forceChangeDetectionC1"
           [scheduleAction]="scheduleAction"
-          [scheduleType]="scheduleType"
           (status)="onNotify($event)"
         >
         </app-sched-c1>
