fix for loans and debt category issue

--- a/front-end/src/app/forms/transactions/filter/transactions-filter.component.html
+++ b/front-end/src/app/forms/transactions/filter/transactions-filter.component.html
@@ -234,7 +234,7 @@
           </i>
         </div>
         <div class="card-body" [@openClose]="!isHideloanClosingBalanceFilter ? 'open' : 'closed'">
-          <div *ngIf="loanClosingBalanceFilterValidation.isError" class="text-error text-center">
+          <div *ngIf="loanClosingBalanceFilterValidation?.isError" class="text-error text-center">
             {{ loanClosingBalanceFilterValidation.message }}
           </div>            
           <label for="filter-amount-min">Minimum</label>
