--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="form-sidebar">
+<div class="form-sidebar" *ngIf="!allTransactions">
   <header>
     <h2 class="text-center">Transaction Categories</h2>
     <!-- <ng-container *ngIf="step === 'step_2' || step === 'step_3'"> -->
